Fixed horizontal scroll on mobile issue

--- a/src/App.css
+++ b/src/App.css
@@ -45,12 +45,6 @@
   }
 }
 
-@media(max-width: 500px) {
-  :root {
-    font-size: 12ujupx;
-  }
-}
-
 /* globals**/
 
 body {
@@ -142,7 +136,7 @@ a:hover {
 .bgr-div {
   height: 170vh;
   position: absolute;
-  width: 500%;
+  width: 100%;
   z-index: 1;
   background: var(--lightBlue);
   top: 65vh;
@@ -188,6 +182,7 @@ nav.nav {
   align-items: baseline;
   justify-content: space-between;
   padding: .8rem 1rem;
+  font-size: 1.2rem;
 }
 
 .navbar div.logo-div {
@@ -217,8 +212,8 @@ div.logo-div .nav-toggler-wrapper {
 }
 
 div.nav-toggler-wrapper button {
-  width: 2rem;
-  height: 2rem;
+  width: 2.2rem;
+  height: 2.2rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -544,11 +539,14 @@ section.h-div-md1 div.flex-div .about-div p {
 section.h-div-md1 div.mv-div {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: space-evenly;
 }
 
 section.h-div-md1 div.mv-div>div {
-  margin: 2rem;
+  margin: 2rem 1rem;
+  max-width: 350px;
+  min-width: 250px;
 }
 
 section.h-div-md1 div.mv-div>div>h3 {
@@ -599,7 +597,7 @@ section.h-div-md2>div>div.flex-div {
 
 section.h-div-md2>div>div.flex-div .img-div {
   max-width: 32%;
-  min-width: 270px;
+  min-width: 280px;
   flex: 1 1 200px;
   margin: 0.4rem;
   background: rgba(0, 0, 0, 0.8);
